mux-compiler/tests/snapshots/executable_integration__executable_integration__semantic_undefined_func.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
error: Undefined function 'foo'
--> test_scripts/error_cases/semantic_undefined_func.mux:2:1
   |
 2 | foo()
   | ^^^
